tests/syntax_errors/test_missing.ice
algorithm error1(input uint1 bl
{
  
}
